welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baissebrosse()
	var b : Boolean = false
	while (!b) {
	while(!estFaceMur)
	{avance()}
	if (getDirection() == Direction.EST) {droite();avance()}
	if (getDirection() == Direction.OUEST) {gauche();avance()}
	
}}
